--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.12.4",
-    "vue": "latest"
-  },
-  "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.1"
+    "nuxt": "^3.13.2",
+    "vue": "latest",
+    "vue-router": "latest"
   }
 }
